# neelix

./: Cargo.toml  config.toml
src/: lib.rs  main.rs  nostd_types.rs  types.rs
src/background/: clock.rs  hid.rs  mod.rs  now_playing.rs  pc_stats.rs  process_watcher.rs  qgf_art.rs
src/background/hid/: mod.rs
src/background/hid/schema/: mod.rs
src/background/now_playing/: mod.rs
src/background/ts6/: auth.rs  mod.rs  types.rs
src/config/: mod.rs
src/device/: fields.rs  mod.rs
src/game_stats/: mod.rs
src/hid/: mod.rs
src/now_playing/: mod.rs
src/painter/: example.rs  lib_tests.rs  mod.rs  painter_utils.rs  qmk_cli_vectors.rs  qmk_painter.rs
src/pc_stats/: mod.rs
src/process_watcher/: mod.rs
src/schema/: mod.rs
src/stats/: mod.rs
src/ui/: dialog.rs
