[package]
name = "slipstream"
version = "0.1.0"
edition = "2024"


[features]
default = ["std"]
std = [
    "serde",
    "toml",
    "hidapi",
    "sysinfo",
    "tokio",
    "image",
    "win-gsmtc",
    "mpris",
    "reqwest",
    "latinrs",
    "systemstat",
    "tray-icon",
    "tao",
    "tokio-tungstenite",
    "futures-util",
    "serde_json",
    "gpui",
    "gpui-component",
    "anyhow",
    "lazy_static",
    "thiserror",
    "qmk-qgf",
    "chrono"
    ]

[[bin]]
name = "slipstream"
path = "src/main.rs"
required-features = ["std"]




[dependencies]
serde = {version = "^1.0", features = ["derive"], optional = true}
toml = { version = "^0.9" , optional = true}
hidapi = {version = "2.6.3" , optional = true}
sysinfo = {version = "^0" , optional = true}
tokio = { version = "^1.19", features = ["full"] ,optional = true}
image =  {version = "0.25.8" , optional = true}
latinrs = {version = "0.1.0" , optional = true}
systemstat = {version = "0.2.5" , optional = true}
tray-icon = { version = "0.21.2", optional = true }
tao = {version = "0.34.5", optional = true}
tokio-tungstenite = {version = "0.28.0", optional = true}
futures-util = {version = "0.3.31", optional = true}
serde_json = {version = "1.0.145", optional = true}
thiserror = { version = "2.0.17", optional = true }
qmk-qgf = { git = "https://github.com/M1K8/qmk-qgf-rs", branch = "main", optional = true }


gpui = { version = "0.2.2", optional = true }
gpui-component = { version = "0.4.0", optional = true }
anyhow = { version = "1.0", optional = true }
lazy_static = {version = "1.5.0", optional = true}
chrono = {version = "^0.4.43", optional = true}

[target.'cfg(windows)'.dependencies]
win-gsmtc = {version = "0.1.0" , optional = true}

[target.'cfg(unix)'.dependencies]
mpris = {version = "2.0.1" , optional = true}
reqwest = {version = "0.12.24", features = ["blocking"], optional = true}
